app/stylesheets/main.scss
@import "partials/settings";
@import "~foundation-sites/scss/foundation";
@import "partials/base";
@include foundation-everything($flex: true);

@font-face {
  font-family: Conduit;
  /* Don't use line-breaks here, SASS doesn't like them */
  src: url("../fonts/ConduitITCStd.otf") format("opentype"), url("../fonts/ConduitITCStd.woff") format("woff");;
  font-style: normal;
}

@font-face {
  font-family: Conduit;
  src: url("../fonts/ConduitITCStd-Bold.otf") format("opentype"), url("../fonts/ConduitITCStd-Bold.woff") format("woff");;
  font-weight: bold;
}

@font-face {
  font-family: Conduit;
  src: url("../fonts/ConduitITCStd-Italic.otf") format("opentype"), url("../fonts/ConduitITCStd-Italic.woff") format("woff");
  font-style: italic;
}

@font-face {
  font-family: Conduit;
  src: url("../fonts/ConduitITCStd-BoldItalic.otf") format("opentype"), url("../fonts/ConduitITCStd-BoldItalic.woff") format("woff");
  font-weight: bold;
  font-style: italic;
}

@media #{$small-only} {
  body,html {
    font-size: 5vmin;
  }

  ul.job_list_items li a {
    font-size: 10.3em;
  }
  #logo {
    width: 70vmin;
  }
}
.inline-logo {
  height: 1em;
  margin-bottom: -1px;
  margin-left: 0.2em;
  margin-right: 0.2em;
}

.inline-logo-nomargin {
  margin-left: 0;
  margin-right: 0;
}

.menu .inline-logo {
  margin-right: -0.05em;
}

@media only screen and (max-width: 1023px) {
     h2 {
       font-size: 1.4rem;
     }

     h3 {
       font-size: 1.2rem;
     }
     p {
       font-size: 0.8rem;
     }
}

@media #{$medium-only} {
  body,html {
    font-size: 4.5vmin;
  }
  #logo {
    width: 70vmin;
  }
}

@media #{$large-only} {
  ul.job_list_items li a {
    font-size: 1.3em;
  }
  .close-button-mobile {
    display: hidden;
  }
}

.row {
  max-width: 100%;
}
body {
  font-family: Conduit;
  color: white;
  white-space: normal;
  background-repeat: no-repeat;
  // 100 * n_sections
}

h1, h2 {
  text-transform: uppercase;
}

h2 {
  line-height: 1.1;
}

.mainContainer {
  width: 100%;
  height: 100%;
}

section {
  position: relative;
  display: inline-block;
  width: 100vw;
  height: 100vh !important;
  margin: 0;
  vertical-align: top;
}

section {
    min-height: 700px;
  }

.work-arguments li, dd {
  white-space: normal;
  margin-top: 0.4em;
  margin-bottom: 1em;
}

dt {
  display: inline-block;
  color: rgba(5, 55, 100, 1);
  background-color: $white;
  font-weight: bold;
  text-transform: uppercase;
  padding: 0.4em 0.8em 0.1em 0.65em;
  margin: 0.75em 0em 1em 0em;
  vertical-align: middle;

}

.content {
  z-index: 1;
  width: 100vw;
  height: 100vh;
  position: relative;
}

.decorations {
  width: 100%;
}

.noMouse {
  pointer-events: none;
}

#mouseIcon {
  position: absolute;
  top: 85%;
  left: 50%;
  transform: translateX(-50%);
  text-transform: uppercase;
}

#logo {
  margin-top: 60px;
  margin-bottom: 20px;
}

#sunburstContainer {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.sunburst-svg {
  width: 100vmin;
  height: 100vmin;
}

#sunburst3 {
  position: absolute;
  top: 50%;
  margin-top: -800px;
  left: 50%;
  margin-left: -800px;
  z-index: -1;
}

#sunburst2 {
  //transform-origin: 50% 50%;
  //animation: orbitSpin 300s infinite linear;
}

@keyframes orbitSpin {
  0% { transform: rotate(0deg);}
  100% { transform: rotate(360deg);}
}

#sunburst path {
  stroke: rgb(60, 115, 165);
  fill-rule: evenodd;
}

#sunburst2 path {
  stroke: rgba(255, 255, 255, 1.0);
  fill-rule: evenodd;
}

#sunburst2 {
  opacity: 0.05;
}

#moon {
  position: absolute;
  bottom: 0;
  right: 0;
  opacity: 0.0;
}

#sun {
  position: absolute;
  bottom: 0;
  left: 0;
  opacity: 0.0;
}

#fullpage > section {
  @include breakpoint(medium down) {
    padding-top: 2em;
  }
}

.menu-shadow {
  text-shadow: 0px 0px 2px rgba(12, 77, 120, 0.7);
}

#fixed-menu {
  position: fixed;
  top: 0px;
  left: 0px;
  padding: 20px;
  //height: auto;
  z-index: 3;
  @include breakpoint(medium down) {
    width: 100%;
  }
}

#fixed-menu ul {
  @include breakpoint(medium down) {
    left: 0;
    top: 0;
    z-index: -1;
    width: 100%;
    padding-top: 2.1em;
    padding-bottom: 0.8em;
    position: absolute;
    margin-left: 0 !important;
    padding-left: 20px;
    padding-right: 20px;
    background-color: rgba(0, 0, 0, 0.8);
  }
}

#fixed-menu .menu {
  margin-top: 0.2em;
  clear: both;
  float: left;
  margin-left: 1.7em;
}

#fixed-menu .menu li {
  text-transform: uppercase;
  font-weight: bold;
  margin-bottom: 3px;
  @extend .menu-shadow;
}

#fixed-menu .menu li.menu_divider {
  border-bottom: none;
  height: 1em;
  @include breakpoint(medium down) {
    height: 1.5em;
  }
}

#fixed-menu .menu li.menu_divider::after {
  background: none;
}

#fixed-menu .menu li a {
  color: #fff;
  padding: 0.3rem 0;
  padding-bottom: 0;
  margin-bottom: 0;
  @include breakpoint(medium down) {
    font-size: 1.4em;
  }
}

#fixed-menu .menu li:last-child::after {
  background: none;
}

#fixed-menu .menu li::after{
  content: "";
  position: absolute;
  height: 1px;
  width: 100%;
  background: #444;
  background: linear-gradient(to right, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
  @include breakpoint(medium down) {
    height: 2px;
  }
 }

.asterisk {
  font-size: 3.2rem;
  font-weight: bold;
  //float: left;
  line-height: 0.7em;
  //vertical-align: bottom;
  //height: 100%;
  width: 2.5em;
  @include breakpoint(medium down) {
    display: block;
    width: 100%;
  }
  height: 0.4em;
  overflow: hidden;
}

.asterisk div {
  float: left;
  height: 0.4em;
}

.asterisk-symbol {
  height: 0.4em;
  vertical-align: bottom;
  padding-top: 0.15em;
}

// Interstingly, IE actually does the sensible thing here
_:-ms-lang(x), .asterisk-symbol {
  padding-top: 0;
}

.asterisk:hover {
  cursor: pointer;
}

#menu-logo {
  float: left;
  display: none;
  height: 0.5em;
  width: 1.837em;
  margin-left: 0.1em;
  //margin-top: -0.4em;
  @extend .menu-shadow;
}


ul.job_list_items {
  text-align: right;
}
/* ... */

